--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 			<p>To take a position as a software delevoper or software engineer.</p>
 			<h4>Education</h4>
 			<p>Coding Classes</p>
-			    <li>Codecademy: HTML and CSS</li>
-			    <li>Codeschool: jQuery Basics</li>
-				<li>Udacity: Javascript Basics; How to Use Git and Github</li>
+			    <li>Online Courses from Codecademy, Codeschool, and Udacity: HTML and CSS, jQuery Basics, Javascript Basics, How to Use Git and Github</li>
 			<p>Secondary Education for Teaching Mathematics, Santa Clara University- Graduate School of Education (2012-2014)</p>
 			    <li>Over 30+ units taken in graduate level education classes (GPA: 3.58)</li>
 				<li>Student Council- Treasurer</li>
